--- a/app/templates/formulario-persona-tmpl.html
+++ b/app/templates/formulario-persona-tmpl.html
@@ -1,6 +1,11 @@
 <div class="panel panel-default">
     <div class="panel-body">
-        <section class="form">
+        <section class="form" id="formDatos">
+            <div class="form-group">
+                <label for="nombre">Id</label>
+                <input name="id" id="id" class="form-control">
+                <span class="help-block">Identificador</span>
+            </div>
             <div class="form-group">
                 <label for="nombre">Nombre</label>
                 <input name="nombre" id="nombre" class="form-control">
@@ -12,12 +17,32 @@
                 <span class="help-block">Apellido de la nueva persona.</span>
             </div>
             <div class="form-group">
-                <label for="nombre">Username</label>
+                <label for="nombre">Alias</label>
+                <input name="alias" id="alias" class="form-control">
+                <span class="help-block">Alias</span>
+            </div>
+            <div class="form-group">
+                <label for="nombre">Telefono</label>
+                <input name="telefono" id="telefono" class="form-control">
+                <span class="help-block">Telefono</span>
+            </div>
+            <div class="form-group">
+                <label for="nombre">Email</label>
                 <div class="input-group">
                     <div class="input-group-addon">@</div>
-                    <input type="text" class="form-control" name="username" id="username">
+                    <input type="text" class="form-control" name="email" id="email">
                 </div>
-                <span class="help-block">Username de la persona sin el @ inicial.</span>
+                <span class="help-block">Email de la persona.</span>
+            </div>
+            <div class="form-group">
+                <label for="nombre">Dirección</label>
+                <input name="direccion" id="direccion" class="form-control">
+                <span class="help-block">Direccion de residencia.</span>
+            </div>
+            <div class="form-group">
+                <label for="nombre">Fecha de Creación</label>
+                <input name="fechaCreacion" id="fechaCreacion" class="form-control">
+                <span class="help-block">Fecha</span>
             </div>
         </section>
     </div>
