--- a/app/templates/lista-persona-tmpl.html
+++ b/app/templates/lista-persona-tmpl.html
@@ -2,12 +2,16 @@
 <div class="panel panel-default">
     <div class="panel-heading">Listado de personas</div>
     <div class="panel-body">
-        <table class="table table-striped">
+        <table class="table table-striped" >
             <thead>
                 <tr>
-                    <th>First Name</th>
-                    <th>Last Name</th>
-                    <th>Username</th>
+                    <th>Nombres</th>
+                    <th>Apellidos</th>
+                    <th>Alias</th>
+                    <th>Telefono</th>
+                    <th>Email</th>
+                    <th>Dirección</th>
+                    <th>Fecha de creación</th>
                 </tr>
             </thead>
             <tbody>
@@ -19,8 +23,20 @@
                         <td>
                             <%=item.apellido %>
                         </td>
-                        <td>@
-                            <%=item.username %>
+                        <td>
+                            <%=item.alias %>
+                        </td>
+                        <td>
+                            <%=item.telefono %>
+                        </td>
+                        <td>
+                            <%=item.email %>
+                        </td>
+                        <td>
+                            <%=item.direccion %>
+                        </td>
+                        <td>
+                            <%=item.fechaCreacion %>
                         </td>
                     </tr>
                     <% }); %>
