--- a/app/templates/formulario-persona-tmpl.html
+++ b/app/templates/formulario-persona-tmpl.html
@@ -3,46 +3,39 @@
         <section class="form" id="formDatos">
             <div class="form-group">
                 <label for="nombre">Id</label>
-                <input name="id" id="id" class="form-control">
-                <span class="help-block">Identificador</span>
+                <input name="id" id="id" class="form-control" type="number" placeholder="Identific" required >
             </div>
             <div class="form-group">
                 <label for="nombre">Nombre</label>
-                <input name="nombre" id="nombre" class="form-control">
-                <span class="help-block">Nombre de la nueva persona.</span>
+                <input name="nombre" id="nombre" class="form-control" type="text" maxlength="25" placeholder="Longitud máxima de 25 caracteres" required >
             </div>
             <div class="form-group">
                 <label for="nombre">Apellido</label>
-                <input name="apellido" id="apellido" class="form-control">
-                <span class="help-block">Apellido de la nueva persona.</span>
+                <input name="apellido" id="apellido" class="form-control" type="text" maxlength="30" placeholder="Longitud máxima de 30 caracteres" required>
             </div>
             <div class="form-group">
                 <label for="nombre">Alias</label>
-                <input name="alias" id="alias" class="form-control">
-                <span class="help-block">Alias</span>
+                <input name="alias" id="alias" class="form-control" type="text" placeholder="Longitud máxima de 25 caracteres [Opcional]" maxlength="25">
             </div>
             <div class="form-group">
                 <label for="nombre">Telefono</label>
-                <input name="telefono" id="telefono" class="form-control">
-                <span class="help-block">Telefono</span>
+                <input name="telefono" id="telefono" class="form-control" type="number" placeholder="Solamente se admiten números" required>
             </div>
             <div class="form-group">
                 <label for="nombre">Email</label>
                 <div class="input-group">
                     <div class="input-group-addon">@</div>
-                    <input type="text" class="form-control" name="email" id="email">
+                    <input type="text" class="form-control" name="email" id="email" type="email" pattern="[A-Za-z0-9._%+-]+@[A-Za-z0-9.-]+\.[A-Za-z]{1,63}$" placeholder="example@gmail.com" required>
                 </div>
                 <span class="help-block">Email de la persona.</span>
             </div>
             <div class="form-group">
                 <label for="nombre">Dirección</label>
-                <input name="direccion" id="direccion" class="form-control">
-                <span class="help-block">Direccion de residencia.</span>
+                <input name="direccion" id="direccion" class="form-control" type="text" maxlength="100" placeholder="Longitud máxima de 100 caracteres [Opcional]">
             </div>
             <div class="form-group">
                 <label for="nombre">Fecha de Creación</label>
-                <input name="fechaCreacion" id="fechaCreacion" class="form-control">
-                <span class="help-block">Fecha</span>
+                <input name="fechaCreacion" id="fechaCreacion" class="form-control" type="datetime" disabled>
             </div>
         </section>
     </div>
