--- a/app/templates/lista-persona-tmpl.html
+++ b/app/templates/lista-persona-tmpl.html
@@ -1,3 +1,25 @@
+<label style="font-size: 25px">Buscar:</label>
+<div id="caja1">
+    <select class="form-control" name="sel1" style="width: 150px;">
+        <option>Nombre</option>
+        <option>ID</option>
+        <option>Apellido</option>
+        <option>Alias</option>
+        <option>Email</option>
+        <option>Dirección</option>
+    </select><br>
+    <input type="text" placeholder="Buscar" name="filtrado" id="filtrado"  class="form-control">
+    <br>
+    <a class="btn btn-default" id="filtrar" role="button">
+        <i class="glyphicon glyphicon-floppy-disk"></i> &nbsp;Buscar
+    </a>
+    <a class="btn btn-default" id="limpiar" role="button">
+        <i class="glyphicon glyphicon-floppy-disk"></i> &nbsp;Limpiar
+    </a>
+
+</div>
+<br>
+
 <!-- templates/lista-persona-tmpl -->
 <div class="panel panel-default">
     <div class="panel-heading">Listado de personas</div>
