--- a/app/templates/lista-persona-tmpl.html
+++ b/app/templates/lista-persona-tmpl.html
@@ -35,6 +35,7 @@
                     <th>Email</th>
                     <th>Dirección</th>
                     <th>Fecha de creación</th>
+                    <th>Acción</th>
                 </tr>
             </thead>
             <tbody>
@@ -63,6 +64,9 @@
                         </td>
                         <td>
                             <%=item.fechaCreacion %>
+                        </td>
+                        <td>
+                            <button name="eliminar" class="btn btn-danger">Eliminar</button>
                         </td>
                     </tr>
                     <% }); %>
