--- a/app/templates/formulario-persona-tmpl.html
+++ b/app/templates/formulario-persona-tmpl.html
@@ -1,32 +1,33 @@
 <div class="panel panel-default">
     <div class="panel-body">
         <section class="form" id="formDatos">
+            <h2><%= $.isEmptyObject(contacto) ? 'Agregar' : 'Editar'%> contacto</h2>
             <div class="form-group">
                 <label for="nombre">Nombre:</label>
-                <input name="nombre" id="nombre" class="form-control" type="text" maxlength="25" placeholder="Longitud máxima de 25 caracteres" required >
+                <input value="<%= !$.isEmptyObject(contacto) ? contacto.nombre : '' %>" name="nombre" id="nombre" class="form-control" type="text" maxlength="25" placeholder="Longitud máxima de 25 caracteres" required >
             </div>
             <div class="form-group">
                 <label for="nombre">Apellido:</label>
-                <input name="apellido" id="apellido" class="form-control" type="text" maxlength="30" placeholder="Longitud máxima de 30 caracteres" required>
+                <input value="<%= !$.isEmptyObject(contacto) ? contacto.apellido : '' %>" name="apellido" id="apellido" class="form-control" type="text" maxlength="30" placeholder="Longitud máxima de 30 caracteres" required>
             </div>
             <div class="form-group">
                 <label for="nombre">Alias:</label>
-                <input name="alias" id="alias" class="form-control" type="text" placeholder="Longitud máxima de 25 caracteres [Opcional]" maxlength="25">
+                <input value="<%= !$.isEmptyObject(contacto) ? contacto.alias : '' %>" name="alias" id="alias" class="form-control" type="text" placeholder="Longitud máxima de 25 caracteres [Opcional]" maxlength="25">
             </div>
             <div class="form-group">
                 <label for="nombre">Teléfono:</label>
-                <input name="telefono" id="telefono" class="form-control" type="number" placeholder="Solamente se admiten números" required>
+                <input value="<%= !$.isEmptyObject(contacto) ? contacto.telefono : '' %>" name="telefono" id="telefono" class="form-control" type="number" placeholder="Solamente se admiten números" required>
             </div>
             <div class="form-group">
                 <label for="nombre">Email:</label>
                 <div class="input-group">
                     <div class="input-group-addon">@</div>
-                    <input type="text" class="form-control" name="email" id="email" type="email" pattern="[A-Za-z0-9._%+-]+@[A-Za-z0-9.-]+\.[A-Za-z]{1,63}$" placeholder="example@gmail.com" required>
+                    <input value="<%= !$.isEmptyObject(contacto) ? contacto.email : '' %>" class="form-control" name="email" id="email" type="email" pattern="[A-Za-z0-9._%+-]+@[A-Za-z0-9.-]+\.[A-Za-z]{1,63}$" placeholder="example@gmail.com" required>
                 </div>
             </div>
             <div class="form-group">
                 <label for="nombre">Dirección:</label>
-                <input name="direccion" id="direccion" class="form-control" type="text" maxlength="100" placeholder="Longitud máxima de 100 caracteres [Opcional]">
+                <input value="<%= !$.isEmptyObject(contacto) ? contacto.direccion : '' %>" name="direccion" id="direccion" class="form-control" type="text" maxlength="100" placeholder="Longitud máxima de 100 caracteres [Opcional]">
             </div>
         </section>
     </div>
