--- a/app/templates/lista-persona-tmpl.html
+++ b/app/templates/lista-persona-tmpl.html
@@ -39,7 +39,7 @@
             </thead>
             <tbody>
                 <% _.forEach(collection, function(item){ %>
-                    <tr data-id="<%=item.id%>" >
+                    <tr data-id="<%=item.id%>" id="tr1">
                         <td>
                             <%=item.id %>
                         </td>
@@ -62,13 +62,16 @@
                             <%=item.direccion %>
                         </td>
                         <td>
-                            <%=item.fechaCreacion %>
+                            <%=item.fechacreacion %>
                         </td>
 
                     </tr>
                     <% }); %>
             </tbody>
         </table>
+            <p><em>*Click sobre alguna fila para seleccionar item </em></p>
+            <br>
+            <br>
             <button id="editar" class="btn btn-danger">Editar</button>
             <button id="eliminar" class="btn btn-danger">Eliminar</button>
     </div>
