--- a/app/templates/formulario-persona-tmpl.html
+++ b/app/templates/formulario-persona-tmpl.html
@@ -16,7 +16,7 @@
             </div>
             <div class="form-group">
                 <label for="nombre">Teléfono:</label>
-                <input value="<%= !$.isEmptyObject(contacto) ? contacto.telefono : '' %>" name="telefono" id="telefono" class="form-control" type="number" placeholder="Solamente se admiten números" required>
+                <input value="<%= !$.isEmptyObject(contacto) ? contacto.telefono : '' %>" name="telefono" id="telefono" class="form-control" min="0" type="number" placeholder="Solamente se admiten números" required>
             </div>
             <div class="form-group">
                 <label for="nombre">Email:</label>
