Ya se consiguió traer los datos para la paginación, pero falta poder acceder a ellos

--- a/app/templates/lista-persona-tmpl.html
+++ b/app/templates/lista-persona-tmpl.html
@@ -75,9 +75,17 @@
         </table>
             <p><em>*Click sobre alguna fila para seleccionar item </em></p>
             <br>
-            <br>
-            <button id="editar" class="btn btn-danger">Editar</button>
+            <button id="editar" class="btn btn-warning">Editar</button>
             <button id="eliminar" class="btn btn-danger">Eliminar</button>
     </div>
 </div>
 <!-- Fin templates/lista-persona-tmpl -->
+
+<br>
+<input class="form-control" name="inicio" id="inicio" type="number" min="0" placeholder="Inicio" style="width: 150px;">
+<br>
+<input class="form-control" name="cantidad" id="cantidad" type="number" min="1" placeholder="Cantidad" style="width: 150px;">
+<br>
+<input class="form-control" name="filtro" id="filtro" type="text" placeholder="Filtro" style="width: 150px;">
+<br>
+<button id="pag" class="btn btn-danger">Paginación</button>
