--- a/app/templates/lista-persona-tmpl.html
+++ b/app/templates/lista-persona-tmpl.html
@@ -80,12 +80,6 @@
     </div>
 </div>
 <!-- Fin templates/lista-persona-tmpl -->
-
-<br>
-<input class="form-control" name="inicio" id="inicio" type="number" min="0" placeholder="Inicio" style="width: 150px;">
-<br>
-<input class="form-control" name="cantidad" id="cantidad" type="number" min="1" placeholder="Cantidad" style="width: 150px;">
-<br>
-<input class="form-control" name="filtro" id="filtro" type="text" placeholder="Filtro" style="width: 150px;">
-<br>
-<button id="pag" class="btn btn-danger">Paginación</button>
+<button id="anterior" class="btn btn-warning">Anterior Pagina</button>
+ Página <%=pagina%> de <%=pagMax%>
+<button id="siguiente" class="btn btn-danger">Siguiente</button>
