El modal para agregar ya funciona

--- a/app/templates/formulario-persona-tmpl.html
+++ b/app/templates/formulario-persona-tmpl.html
@@ -1,3 +1,4 @@
+<div class="container-fluid">
 <div class="panel panel-default">
     <div class="panel-body">
         <section class="form" id="formDatos">
@@ -32,8 +33,9 @@
         </section>
     </div>
     <div class="panel-footer">
-        <a class="btn btn-default" id="guardar" role="button">
+        <a class="btn btn-default" id="guardar" data-dismiss="modal" role="button">
             <i class="glyphicon glyphicon-floppy-disk"></i> &nbsp;Guardar
         </a>
     </div>
+</div>
 </div>
