Ya funciona editar y agregar con modales

--- a/app/templates/lista-persona-tmpl.html
+++ b/app/templates/lista-persona-tmpl.html
@@ -75,7 +75,7 @@
         </table>
             <p><em>*Click sobre alguna fila para seleccionar item </em></p>
             <br>
-            <button id="editar" class="btn btn-warning">Editar</button>
+            <button id="editar" class="btn btn-warning" data-toggle="modal" data-target="#myModal2">Editar</button>
             <button id="eliminar" class="btn btn-danger">Eliminar</button>
     </div>
 </div>
