--- a/templates/lista-persona-tmpl.html
+++ b/templates/lista-persona-tmpl.html
@@ -61,7 +61,7 @@
                         </td>
                         <td>
                             <% if (!$.isEmptyObject(item.fechamodificacion)) { %>
-                            _.formatdate(item.fechamodificacion)
+                            <%=_.formatdate(item.fechamodificacion)%>
                             <% } %>
 
                         </td>
