--- a/app/templates/lista-persona-tmpl.html
+++ b/app/templates/lista-persona-tmpl.html
@@ -60,7 +60,9 @@
 
                         </td>
                         <td>
-                            <%= _.formatdate(item.fechamodificacion) %>
+                            <% if (!$.isEmptyObject(item.fechamodificacion)) { %>
+                            <%=_.formatdate(item.fechamodificacion)%>
+                            <% } %>
                         </td>
 
                     </tr>
